--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
           <div class="bg-white p-5 mb-4 text-center rounded-md overflow-hidden b-hover" data-aos="fade-up"  data-aos-easing="linear" data-aos-delay="300">
       <img src="assets/img/about/img27.jpg" width="90%" class="rounded-md" alt="">
                   <h6 class="my-2">Reunion</h6>
-                  <p class="text-muted">Rare opportunity, during the motherland's 70th birthday, my two sisiter and I gathering in Shanghai.</p> 
+                  <p class="text-muted">Rare opportunity, during the motherland's 70th birthday, my two sisiters and I gathered in Shanghai.</p> 
           </div>
       </div>
     <div class="col-md-4">
