--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <!-- Testimonial -->
               <blockquote class="wt-blockquote-v2 rounded mb-5">
                 <p><strong>Chu Kochen Honors College</strong></p>
-                <p>Chu Kochen Honors College is the only honors college in ZJU. The most excellent students from the school will be selected to study in this college, and the last 10% in CKC will be eliminated each year.</p></blockquote>
+                <p>Chu Kochen Honors College (CKC) is the only honors college in ZJU. The most excellent students from the school will be selected to study in this college, and the last 10% in CKC will be eliminated each year.</p></blockquote>
               </blockquote>
               <div class="media wt-font-size-90">
                 <img src="assets/img/about/img26.jpg" width="75%" class="rounded-top" alt="">
